[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cacheflight"
version = "1.0.0"
description = "In-process async request deduplication — prevent duplicate expensive work under concurrent load."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "CacheFlight Contributors" }]
keywords = ["cache", "dedupe", "deduplication", "async", "concurrency", "stampede", "coalescing"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/cacheflight/cacheflight-python"
Documentation = "https://github.com/cacheflight/cacheflight-python#readme"
Repository = "https://github.com/cacheflight/cacheflight-python"
Issues = "https://github.com/cacheflight/cacheflight-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cacheflight"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow-running soak tests",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

